Fix width of chat window to align with inputs/buttons

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,6 @@ body {
   border-style: solid;
   background-color: #000044C9;
   height: 70%;
-  width: 100%;
   overflow-y: auto;
 }
 
